Release 1.4.1 - TBD
===========================================================================

Moqui Framework 1.4.1 is a minor new feature and bug fix release.

New Features:

- Added UserGroupPreference, like UserPreference but for user groups.
  UserFacade.getPreference() now looks for group preference if no user
  preference is found.

Bug Fixes:

- Changed commit() to rollback if commit fails to cleanup the transaction,
  can happen for example with TransactionCache has a DB error during
  pre-commit
- ArtifactHit count now skipped for UserAccount to avoid infinite recursion
  (shows as a StackOverflow exception)
- EntityValue.containsKey() now returns true if there is a value for the
  key (even null), not just if it is a valid field name; this was
  inconvenient for various things, especially when treating EntityValue
  like a Map

===========================================================================
Release 1.4.0 - 21 Mar 2014
===========================================================================

Moqui Framework 1.4.0 is a major new feature and bug fix release.

Significant new features include: incorporating the Metis Admin Template,
adding Twitter Bootstrap and updating jQuery/jQueryUI, added Bitronix
transaction manager and pluggable JTA implementation support, added JBoss
KIE and Drools with framework and component knowledge base support,
Markdown support, JSON-RPC improvements, data loading improvements to
support CSV files and calling services to load data, a Quartz Scheduler
history in the DB and a Quartz persistence implementation, and services to
clean Quartz history as well as Moqui artifact hit and hit bin histories.

There are various bug fixes and stability improvements in this release for
things like PostgreSQL support, input data handling, form-list and general
pagination, Tomcat and other Servlet container deployment, and email
sending.

This release is backward compatible with the previous release (1.3.2),